Try to fix styling issue on iOS

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,5 @@
 .toggle-button-active {
-    background: #8dc9ee;
+    color: red;
 }
 
 button {
